--- a/uitk/ui/example.ui
+++ b/uitk/ui/example.ui
@@ -34,7 +34,7 @@
   <widget class="QWidget" name="main_widget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <layout class="QVBoxLayout" name="verticalLayout_2">
+     <layout class="QVBoxLayout" name="verticalLayout_1">
       <property name="spacing">
        <number>0</number>
       </property>
@@ -68,7 +68,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QGroupBox" name="Constaints">
+       <widget class="QGroupBox" name="groupBox">
         <property name="minimumSize">
          <size>
           <width>125</width>
@@ -141,7 +141,7 @@
        </widget>
       </item>
       <item>
-       <spacer name="verticalSpacer_2">
+       <spacer name="verticalSpacer_1">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
