--- a/uitk/ui/example.ui
+++ b/uitk/ui/example.ui
@@ -36,31 +36,27 @@
        <number>0</number>
       </property>
       <item>
-       <widget class="PushButtonDraggable" name="draggable_header">
+       <widget class="Draggable_header" name="draggable_header">
         <property name="minimumSize">
          <size>
-          <width>19</width>
-          <height>17</height>
+          <width>0</width>
+          <height>22</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
           <width>125</width>
-          <height>17</height>
+          <height>22</height>
          </size>
         </property>
         <property name="font">
          <font>
           <weight>75</weight>
           <bold>true</bold>
-          <underline>true</underline>
          </font>
         </property>
         <property name="text">
          <string>EXAMPLE</string>
-        </property>
-        <property name="checkable">
-         <bool>true</bool>
         </property>
        </widget>
       </item>
@@ -115,7 +111,7 @@
             <enum>Qt::RightToLeft</enum>
            </property>
            <property name="text">
-            <string>QPushButton</string>
+            <string>PushButton</string>
            </property>
            <property name="autoDefault">
             <bool>false</bool>
@@ -154,9 +150,9 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>PushButtonDraggable</class>
-   <extends>QPushButton</extends>
-   <header>widgets.pushbuttondraggable.h</header>
+   <class>Draggable_header</class>
+   <extends>QLabel</extends>
+   <header>draggable_header.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
