--- a/uitk/example/example.ui
+++ b/uitk/example/example.ui
@@ -93,22 +93,8 @@
          <property name="bottomMargin">
           <number>0</number>
          </property>
-         <item row="1" column="0">
-          <widget class="QCheckBox" name="checkbox">
-           <property name="text">
-            <string>CheckBox</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1">
-          <widget class="QSpinBox" name="spinbox">
-           <property name="prefix">
-            <string>Spinbox:	</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="0" colspan="2">
-          <widget class="PushButton" name="button">
+         <item row="0" column="0">
+          <widget class="PushButton" name="button_a">
            <property name="minimumSize">
             <size>
              <width>0</width>
@@ -125,7 +111,7 @@
             <enum>Qt::RightToLeft</enum>
            </property>
            <property name="text">
-            <string>Button</string>
+            <string>Button A</string>
            </property>
            <property name="autoDefault">
             <bool>false</bool>
@@ -138,6 +124,54 @@
            </property>
            <property name="bnabled" stdset="0">
             <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QCheckBox" name="checkbox">
+           <property name="text">
+            <string>CheckBox</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="2">
+          <widget class="PushButton" name="button_b">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>20</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>999</width>
+             <height>20</height>
+            </size>
+           </property>
+           <property name="layoutDirection">
+            <enum>Qt::RightToLeft</enum>
+           </property>
+           <property name="text">
+            <string>Button B</string>
+           </property>
+           <property name="autoDefault">
+            <bool>false</bool>
+           </property>
+           <property name="default">
+            <bool>false</bool>
+           </property>
+           <property name="flat">
+            <bool>false</bool>
+           </property>
+           <property name="bnabled" stdset="0">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="2">
+          <widget class="QSpinBox" name="spinbox">
+           <property name="prefix">
+            <string>Spinbox:	</string>
            </property>
           </widget>
          </item>
